styles.css
/* ... */
@media screen and (min-width:48rem) {

  body {
    align-items: center;
    justify-content: center;
    padding-inline: 10rem;
  }

  .header {
    height: 6rem;
    width: 100%;
  }

  .header__left--container {
    gap: 3rem;
  }

  .header__right--container {
    gap: 3rem;
    right: 0;
  }

  .header .nav__bar {
    height: 100%;
    display: flex;
    align-items: center;
    gap: var(--space-md);
  }
  
  .nav__toggle {
    display: none;
  }

  .backdrop.is-open {
    z-index: 500;
  }

  .nav__links {
    display: block;
  }

  .nav__links--group li a {
    color: var(--clr-dark-grayish-blue);
    font-weight: var(--fw-regular);
  }

  .nav__drawer {
    position: static;
    width: auto;
    height: auto;
    background: none;
    translate: 0 0;
    padding: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  .nav__links {
    padding: 0;
  }
  
  .nav__links--group {
    flex-direction: row;
    gap: 2rem;
  }

  .cart__modal {
    display: none;
    top: 6.5rem;
    left: 88%;
    width: 20%;
  }

  .user__avatar--btn {
    padding-inline-end: 0;
  }

  .main__product--page {
    display: grid;
    place-items: center;
    grid-template-columns: 1fr 1.2fr;
    gap: 6rem;
    margin-block-start: 5rem;
    padding-inline: 3rem;
  }

  .gallery, .lightbox {
    display: flex;
    flex-direction: column;
    gap: 1.6rem;
    height: 100%;
  }

  .gallery__active--image {
    height: 60vh;
    border-radius: 3%;
  }

  .gallery__btn--prev, .gallery__btn--next {
    display: none;
  }

  .gallery__thumbnails, .lightbox__thumbnails {
    width: 100%;
    display: flex;
    align-items: center;
    gap: 1rem;
  }

  .gallery__thumbnails li, .lightbox__thumbnails li {
    list-style: none;
    flex: 1;
  }

  .gallery__thumb, .lightbox__thumb {
    width: 100%;
    position: relative;
    border-radius: 15%;
    overflow: hidden;
    outline: 2px solid transparent;
    outline-offset: 2px;
  }

  .gallery__thumb.active, .lightbox__thumb.active {
    outline-color: var(--clr-orange);
  }

  .gallery__thumb.active::after, .lightbox__thumb.active::after {
    content: '';
    position: absolute;
    inset: 0;
    background: rgba(255, 255, 255, 0.5);
    border-radius: 15%;
  }

  .gallery__thumb img, .lightbox__thumb img {
    display: block;
    width: 100%;
    height: 5rem;
    object-fit: cover;
    border-radius: 15%;
  }

  .product__info {
    margin-block-start: 0;
    padding-block: 0;
    gap: 1rem;
  }

  .description {
    font-size: clamp(0.9rem, 1.2vw, 2rem);
    text-wrap: pretty;
  }

  .pricing {
    flex-direction: column;
    align-items: start;
    margin-block-end: 0;
  }

  .promo {
    gap: 1.5rem;
  }

  .quantity__cart {
    display: grid;
    grid-template-columns: 1fr 1.6fr;
  }

  .stepper {
    padding-block: -0.1rem;
    margin-block-end: 0;
  }

  .lightbox {
    position: fixed;
    inset: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 600;
    overflow-y: auto;
  } 

  .lightbox__inner {
    position: relative;
    width: min(90%, 44rem); /* doesn't get too wide on large screens */
    padding: 1.5rem;
    display: flex;
    flex-direction: column;
    gap: 2rem;
  }

  .lightbox__active--image {
    width: 100%;
    height: auto;
    max-width: 100%;
    object-fit: contain;
    border-radius: 3%;
  }

  .lightbox__thumb img {
    width: 100%;
    height: 8rem;
  }

  .gallery__btn--prev img, .gallery__btn--next img {
    height: 1.5rem;
    width: 1.5rem;
  }

  .lightbox__btn--prev {
    left: 0.5rem;
    padding: 0.8rem 1rem;
  }

  .lightbox__btn--next {
    right: 0.5rem;
    padding: 0.8rem 1rem;
  }

  .hide {
    display: none;
  }
}

